# algorithmic-trading

./: README.md
src/: CMakeLists.txt  Makefile  dvi.html  main.cc
src/controller/: controller.cc  controller.h
src/model/cubic_spline/: cubic_spline.cc  cubic_spline.h
src/model/facade/: facade.cc  facade.h
src/model/helpers/: file_handler.cc  file_handler.h  matrix.cc  matrix.h
src/model/polynomial_approximation/: polynomial_approximation.cc  polynomial_approximation.h
src/view/: paint_scene.cc  paint_scene.h  qcustomplot.cc  view.cc  view.h  view.ui
src/view/helper/: generator.cc  generator.h  pages.h
